k8s/apps/media-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-worker
  namespace: city-events
  labels:
    app: media-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-worker
  template:
    metadata:
      labels:
        app: media-worker
    spec:
      containers:
        - name: media-worker
          image: real-time-recsys-media-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
